--- a/MyBlog.WebUI/Views/Shared/_Layout.cshtml
+++ b/MyBlog.WebUI/Views/Shared/_Layout.cshtml
@@ -93,52 +93,24 @@
         <a href="@Url.Action("Index","Home")"><img src="~/Content/images/logo.png" class="left-bar__logo"></a>
         <ul class="left-bar__menu">
             <li class="left-bar__menu--item">
-                <span class="left-bar__menu--title"><a style="text-decoration: none;" href="@Url.Action("Index","Home")">Anasayfa</a></span>
+                <span class="left-bar__menu--title"><a class="left-bar__menu--text" href="@Url.Action("Index","Home")">Anasayfa</a></span>
             </li>
             <li class="left-bar__menu--item">
-                <span class="left-bar__menu--title">Kategoriler</span>
-                <ul class="left-bar__menu--dropdown">
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                </ul>
+                <span class="left-bar__menu--title">
+                    <a class="left-bar__menu--text" href="@Url.Action("Index","Post")">Yazılar</a>
+                </span>
             </li>
             <li class="left-bar__menu--item">
-                <span class="left-bar__menu--title">Lorem Ipsum</span>
-                <ul class="left-bar__menu--dropdown">
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                </ul>
+                <span class="left-bar__menu--title"><a class="left-bar__menu--text" href="@Url.Action("Index", "Category")">Kategoriler</a>
+                </span>
             </li>
             <li class="left-bar__menu--item">
-                <span class="left-bar__menu--title">Lorem</span>
-                <ul class="left-bar__menu--dropdown">
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                </ul>
+                <span class="left-bar__menu--title"><a class="left-bar__menu--text" href="@Url.Action("Index","Tag")">Etiketler</a></span>
             </li>
+           
             <li class="left-bar__menu--item">
-                <span class="left-bar__menu--title">Lorem Ipsum</span>
-                <ul class="left-bar__menu--dropdown">
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                </ul>
-            </li>
-            <li class="left-bar__menu--item">
-                <span class="left-bar__menu--title">Lorem</span>
-                <ul class="left-bar__menu--dropdown">
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                    <li class="left-bar__menu--dropdown-item">Lorem Ipsum</li>
-                </ul>
+                <span class="left-bar__menu--title"><a class="left-bar__menu--text" href="@Url.Action("Index", "Contact")">İletişim</a>
+                </span>
             </li>
         </ul>
         <div class="left-bar__menu--search-wrapper">
