Added new changes

--- a/MyBlog.WebUI/Areas/Administrator/Views/Post/Update.cshtml
+++ b/MyBlog.WebUI/Areas/Administrator/Views/Post/Update.cshtml
@@ -24,10 +24,18 @@
                         <textarea asp-for="PostDto.Content" class="form-control"></textarea>
                         <span class="form-validation-alert" asp-validation-for="PostDto.Content"></span>
                     </div>
-                    <div class="admin-post-title-button" style="margin-bottom: 10px;">
+                    <div class="admin-upload-image col-md-6">
+                        <h4 style="margin-bottom: 12px;">Image</h4>
+                        <div class="form-group">
+                            <input asp-for="PostDto.Title" placeholder="Post Title" class="form-control"/>
+                            <span class="form-validation-alert" asp-validation-for="PostDto.Title"></span>
+                        </div>
+                    </div>
+                    <div class="admin-post-title-button col-md-3" style="margin-bottom: 10px;">
                         <button class="btn btn-info">Update Post</button>
                     </div>
                 </div>
+
             </div>
         </div>
         <div class="admin-post-check col-md-3">
