--- a/MyBlog.WebUI/Areas/Administrator/Views/Shared/_Layout.cshtml
+++ b/MyBlog.WebUI/Areas/Administrator/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link href="~/node_modules/select2/dist/css/select2.min.css" rel="stylesheet" />
     <link href="~/node_modules/select2-bootstrap-theme/dist/select2-bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/styles/app.min.css" rel="stylesheet" />
-    <link href="~/Content/styles/style.css" rel="stylesheet" />
+    <link href="~/Content/styles/admin-style.css" rel="stylesheet" />
 </head>
 <body>
     <section id="admin-users" class="admin-operations">
