Added new changes

--- a/MyBlog.WebUI/Views/Category/CategoryPosts.cshtml
+++ b/MyBlog.WebUI/Views/Category/CategoryPosts.cshtml
@@ -8,7 +8,8 @@
     @foreach (var post in Model.PostDetails)
     {
         <div class="load-more__other-post">
-            <a href="@Url.Action("Get","Post",new{@seoUrl=@post.SeoUrl})">                <img src="@post.FirstImage" alt="">
+            <a href="@Url.Action("Get","Post",new{@seoUrl=@post.SeoUrl})">
+                <img src="@post.FirstImage" alt="">
                 <h2 class="load-more__other-post--title">@post.Title</h2>
             </a>
             <ul class="load-more__other-post--date-category">
@@ -21,9 +22,14 @@
                     }
                 </li>
             </ul>
-            <p class="load-more__other-post--summary">
-               @Html.Raw(post.Content)
-            </p>
+            <div class="load-more__other-post--summary">
+                @{
+                    var postContent = post.Content.Length > 330 ? post.Content.Substring(0, 336) + "..." : post.Content;
+                    @Html.Raw(postContent)
+                }
+            </div>
+
+
             <ul class="social-media">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
