--- a/MyBlog.WebUI/Views/Home/Index.cshtml
+++ b/MyBlog.WebUI/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Ömer ARIYÜREK - .NET Developer";
 }
 <section class="homepage-content">
     <div class="homepage-content__about-me">
@@ -127,7 +127,7 @@
             </li>
         </ul>
         <div class="homepage-content__recents-articles--more-btn">
-            <a href="@Url.Action("Index","Post")" class="btn">DEVAMINI OKU</a>
+            <a href="@Url.Action("Index","Post")" class="btn">TÜM YAZILAR</a>
         </div>
     </div>
 </section>
