--- a/MyBlog.WebUI/Views/Shared/_Layout.cshtml
+++ b/MyBlog.WebUI/Views/Shared/_Layout.cshtml
@@ -82,10 +82,10 @@
                 <button><i class="fas fa-search search"></i></button>
             </div>
             <ul class="mobile-header__social-media">
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="far fa-paper-plane"></i></a></li>
+                <li><a href="https://github.com/omerariyurek" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/omerariyurek/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://medium.com/@@omerariyurek" target="_blank"><i class="fab fa-medium"></i></a></li>
+                <li><a href="mailto:omerariyurek@@hotmail.com"><i class="fas fa-envelope"></i></a></li>
             </ul>
         </div>
     </section>
@@ -118,10 +118,10 @@
             <button><i class="fas fa-search search"></i></button>
         </div>
         <ul class="left-bar__social-media">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="far fa-paper-plane"></i></a></li>
+            <li><a href="https://github.com/omerariyurek" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/omerariyurek/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://medium.com/@@omerariyurek" target="_blank"><i class="fab fa-medium"></i></a></li>
+            <li><a href="mailto:omerariyurek@@hotmail.com"><i class="fas fa-envelope"></i></a></li>
         </ul>
     </section>
     @RenderBody()
@@ -131,7 +131,7 @@
     <section class="footer">
         <div class="footer__top">
             <li>
-                <span class="footer__top--title">Etiketler</span>
+                <span class="footer__top--title"><a class="footer__top--title-text" href="@Url.Action("Index","Tag")">Etiketler</a></span>
                 <ul class="footer__top--tags-list">
                     <li><a href="#">Technology</a></li>
                     <li><a href="#">Technology</a></li>
@@ -142,7 +142,7 @@
                 </ul>
             </li>
             <li>
-                <span class="footer__top--title">Kategoriler</span>
+                <span class="footer__top--title"><a class="footer__top--title-text" href="@Url.Action("Index","Category")" target="_blank">Kategoriler</a></span>
                 <ul class="footer__top--categories-list">
                     <li><a href="#">Technology</a></li>
                     <li><a href="#">Technology</a></li>
@@ -164,11 +164,9 @@
         <div class="footer-bottom">
             <p>Bu sitenin kaynak kodlarına <a href="https://github.com/omerariyurek/my-blog" target="_blank"><i class="fab fa-github git-icon"></i> GitHub</a> üzerinden ulaşabilirsiniz.</p>
             <nav>
-                <a href="#">Lorem</a>
-                <a href="#">Ipsum</a>
-                <a href="#">Dolor</a>
-                <a href="#">Sit</a>
-                <a href="#">Amet</a>
+                <a href="#">Anasayfa</a>
+                <a href="#">Yazılar</a>
+                <a href="#">İletişim</a>
             </nav>
         </div>
     </section>
