--- a/MyBlog.WebUI/Content/styles/style.css
+++ b/MyBlog.WebUI/Content/styles/style.css
@@ -360,6 +360,11 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
 }
 
+.footer__top--title-text {
+    color: white;
+    text-decoration: none;
+}
+
 .footer__top--categories-list {
     margin-top: 20px;
     display: inline-block;
@@ -561,7 +566,7 @@ body::-webkit-scrollbar-thumb {
     text-align: center;
 }
 
-.load-more__pagenation li {
+    .load-more__pagenation li {
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -574,9 +579,15 @@ body::-webkit-scrollbar-thumb {
             background: #ec6a2a;
         }
 
-            .load-more__pagenation li:hover a {
-                color: #ffffff;
-            }
+        .load-more__pagenation li .active {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 15px;
+            background-color: #ec6a2a;
+            display: inline-block;
+            color: white;
+        }
 
     .load-more__pagenation a {
         color: #161616;
@@ -636,7 +647,7 @@ body::-webkit-scrollbar-thumb {
         width: 100%;
         color: #ffffff;
         position: absolute;
-        bottom: 20px;
+        bottom: calc(50% - 15px);
         font-size: 20px;
         font-weight: 600;
         text-decoration: none;
@@ -686,12 +697,15 @@ body::-webkit-scrollbar-thumb {
     }
 
     .post-content__info-list a {
-        color: #737373;
+        color: #ec6a2a;
+        word-spacing: 2px;
         text-decoration: none;
     }
-
+    .post-content__info-list a:hover {
+        color: #737373;
+    }
     .post-content__info-list .hyphen {
-        color: #ec6a2a;
+        color: black;
     }
 
 .post-content__main-photo {
@@ -706,10 +720,17 @@ body::-webkit-scrollbar-thumb {
     margin-top: 30px;
 }
 
+.post-content-first-image {
+    width: 80% !important;
+}
 .post-content__content--content-txt {
     padding: 50px 120px;
 }
-
+.post-content__content--content-txt img {
+    width: 100% !important;
+    height: 100% !important;
+    display: inline-block;
+}
 .post-content__content--sub-title {
     font-size: 25px;
     font-weight: bold;
@@ -908,6 +929,7 @@ body::-webkit-scrollbar-thumb {
         margin-top: 10px;
         color: #737373;
         outline: 0;
+        border: 1px solid;
     }
 
     .post-content__post-comment .customer-name {
@@ -958,6 +980,8 @@ body::-webkit-scrollbar-thumb {
         font-size: 12px;
         padding: 10px 20px 10px 20px;
         background: #f5f5f5;
+        display: inline-block;
+        margin: 5px;
     }
 
 #admin-login-wrapper {
@@ -1691,6 +1715,7 @@ label {
 
     .post-content .customer-name {
         width: 100%;
+        border: 1px solid;
     }
 
     .post-content button {
