Added new changes

--- a/MyBlog.WebUI/Views/Shared/_Layout.cshtml
+++ b/MyBlog.WebUI/Views/Shared/_Layout.cshtml
@@ -23,19 +23,19 @@
             <i class="fas fa-times close"></i>
             <ul class="mobile-header__menu">
                 <li class="mobile-header__menu--item">
-                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Home")" class="mobile-header__menu--title--link">Anasayfa</a></span>
+                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Home")">Anasayfa</a></span>
                 </li>
                 <li class="mobile-header__menu--item">
-                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Post")" class="mobile-header__menu--title--link">Yazılar</a></span>
+                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Post")">Yazılar</a></span>
                 </li>
                 <li class="mobile-header__menu--item">
-                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Category")" class="mobile-header__menu--title--link">Kategoriler</a></span>
+                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Category")">Kategoriler</a></span>
                 </li>
                 <li class="mobile-header__menu--item">
-                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Tag")" class="mobile-header__menu--title--link">Etiketler</a></span>
+                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Tag")">Etiketler</a></span>
                 </li>
                 <li class="mobile-header__menu--item">
-                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Contact")" class="mobile-header__menu--title--link">İletişim</a></span>
+                    <span class="mobile-header__menu--title"><a href="@Url.Action("Index","Contact")">İletişim</a></span>
                 </li>
             </ul>
             <div class="mobile-header__menu--search-wrapper">
