--- a/MyBlog.WebUI/Views/Post/Get.cshtml
+++ b/MyBlog.WebUI/Views/Post/Get.cshtml
@@ -2,129 +2,123 @@
 @{
     ViewData["Title"] = $"{Model.PostDetail.Title} - Ömer ARIYÜREK";
 }
-<section class="post-content">
-    <h2 class="post-content__title">@Model.PostDetail.Title</h2>
-    <ul class="post-content__info-list">
-        <li>
-            @foreach (var category in Model.PostDetail.PostCategories)
+    <section class="post-content">
+        <h2 class="post-content__title">@Model.PostDetail.Title</h2>
+        <ul class="post-content__info-list">
+            <li>
+                @foreach (var category in Model.PostDetail.PostCategories)
+                {
+                    <a href="@Url.Action("CategoryPosts","Category",new{@seoUrl=category.SeoUrl})">@category.CategoryName</a>
+                }
+            </li>
+            <li class="hyphen">-</li>
+            <li>
+                <i class="far fa-comment"></i>
+                <small class="post-content__info-list--comment">0</small>
+            </li>
+        </ul>
+        <div class="post-content__content">
+            <img src="@Model.PostDetail.FirstImage" class="post-content__main-photo">
+            <div class="post-content__content--content-txt">
+                @Html.Raw(Model.PostDetail.Content)
+            </div>
+            <ul class="share-social-media">
+                <li style="font-size: larger">Paylaş</li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            </ul>
+        </div>
+        <div class="post-content__category-tag">
+            @foreach (var tag in Model.PostTags)
             {
-                <a href="@Url.Action("CategoryPosts","Category",new{@seoUrl=category.SeoUrl})">@category.CategoryName</a>
+                <a href="@Url.Action("TagPosts","Tag",new{@seoUrl=tag.SeoUrl})">@tag.TagName</a>
             }
-        </li>
-        <li class="hyphen">-</li>
-        <li>
-            <i class="far fa-comment"></i>
-            <small class="post-content__info-list--comment">0</small>
-        </li>
-    </ul>
-    <div class="post-content__content">
-        <img src="@Model.PostDetail.FirstImage" class="post-content__main-photo">
-        <div class="post-content__content--content-txt">
-            @Html.Raw(Model.PostDetail.Content)
         </div>
-        @*<ul class="post-content__content--previous-next">
-            <li class="previous">
-                <span class="orientation-title">Önceki Paylaşım</span>
-                <a href="#" class="post-link">Check Out The Most Awesome VR Headset in 2020</a>
-            </li>
-            <li class="next">
-                <span class="orientation-title">Sonraki Paylaşım</span>
-                <a href="#" class="post-link">Check Out The Most Awesome VR Headset in 2020</a>
-            </li>
-        </ul>*@
-        <ul class="share-social-media">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-        </ul>
-    </div>
-    <div class="post-content__category-tag">
-        @foreach (var tag in Model.PostTags)
+        <div class="post-content__related-post">
+            <h5 class="post-content__related-post--title">Diğer Paylaşımlar</h5>
+            <ul class="post-content__related-post--related-list">
+                @foreach (var post in Model.RandomTwoPosts)
+                {
+                    <li class="post-content__related-post--list-item">
+                        <a href="@Url.Action("Index","Post",new{@seoUrl=post.SeoUrl})">
+                            <div class="img-and-tag">
+                                <img src="@post.CoverImage" alt="">
+                            </div>
+                            <h5 class="post-content__related-post--related-list--title">@post.Title</h5>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </div>
+        @if (Model.PostDetail.CommentStatus)
         {
-            <a href="@Url.Action("TagPosts","Tag",new{@seoUrl=tag.SeoUrl})">@tag.TagName</a>
+            <div class="post-content__comment-wrapper">
+                <h4 class="comment-title">Yorumlarınız</h4>
+                <div class="post-content__comment-wrapper--comment">
+                    <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
+                    <p class="post-content__comment-wrapper--comment-txt">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
+                        enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
+                        Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
+                    </p>
+                </div>
+                <div class="reply-comment">
+                    <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
+                    <p class="post-content__comment-wrapper--comment-txt">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
+                        enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
+                        Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
+                    </p>
+                </div>
+                <div class="reply-comment">
+                    <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
+                    <p class="post-content__comment-wrapper--comment-txt">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
+                        enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
+                        Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
+                    </p>
+                </div>
+                <div class="post-content__comment-wrapper--comment">
+                    <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
+                    <p class="post-content__comment-wrapper--comment-txt">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
+                        enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
+                        Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
+                    </p>
+                </div>
+                <div class="post-content__comment-wrapper--comment">
+                    <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
+                    <p class="post-content__comment-wrapper--comment-txt">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
+                        enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
+                        Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
+                    </p>
+                </div>
+                <div class="reply-comment">
+                    <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
+                    <p class="post-content__comment-wrapper--comment-txt">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
+                        enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
+                        Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
+                    </p>
+                </div>
+            </div>
+            <div class="post-content__post-comment">
+                <h4 class="comment-title">Bir Yorum Yapın</h4>
+                <form>
+                    <label>Yorumunuz</label>
+                    <textarea></textarea>
+                    <div class="small">
+                        <label>Adınız Soyadınız</label>
+                        <input type="text" class="customer-name">
+                    </div>
+                    <div class="small">
+                        <label>E-Mail</label>
+                        <input type="text" class="customer-name">
+                    </div>
+                    <button type="submit">Yorum Gönder</button>
+                </form>
+            </div>
         }
-    </div>
-    <div class="post-content__related-post">
-        <h5 class="post-content__related-post--title">Diğer Paylaşımlar</h5>
-        <ul class="post-content__related-post--related-list">
-           @foreach (var post in Model.RandomTwoPosts)
-           {
-               <li class="post-content__related-post--list-item">
-                   <a href="@Url.Action("Index","Post",new{@seoUrl=post.SeoUrl})">
-                       <div class="img-and-tag">
-                           <img src="@post.CoverImage" alt="">
-                       </div>
-                       <h5 class="post-content__related-post--related-list--title">@post.Title</h5>
-                   </a>
-               </li>
-           }
-        </ul>
-    </div>
-    <div class="post-content__comment-wrapper">
-        <h4 class="comment-title">Yorumlarınız</h4>
-        <div class="post-content__comment-wrapper--comment">
-            <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
-            <p class="post-content__comment-wrapper--comment-txt">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
-                enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
-                Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
-            </p>
-        </div>
-        <div class="reply-comment">
-            <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
-            <p class="post-content__comment-wrapper--comment-txt">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
-                enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
-                Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
-            </p>
-        </div>
-        <div class="reply-comment">
-            <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
-            <p class="post-content__comment-wrapper--comment-txt">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
-                enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
-                Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
-            </p>
-        </div>
-        <div class="post-content__comment-wrapper--comment">
-            <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
-            <p class="post-content__comment-wrapper--comment-txt">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
-                enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
-                Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
-            </p>
-        </div>
-        <div class="post-content__comment-wrapper--comment">
-            <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
-            <p class="post-content__comment-wrapper--comment-txt">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
-                enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
-                Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
-            </p>
-        </div>
-        <div class="reply-comment">
-            <span class="post-content__comment-wrapper--name">Lorem Ipsum</span>
-            <p class="post-content__comment-wrapper--comment-txt">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus porro,
-                enim sequi quod adipisci magnam blanditiis. Blanditiis, minus suscipit.
-                Amet, consequatur provident earum dolor aliquam nostrum fugit velit vero!
-            </p>
-        </div>
-    </div>
-    <div class="post-content__post-comment">
-        <h4 class="comment-title">Bir Yorum Yapın</h4>
-        <form>
-            <label>Yorumunuz</label>
-            <textarea></textarea>
-            <div class="small">
-                <label>Adınız Soyadınız</label>
-                <input type="text" class="customer-name">
-            </div>
-            <div class="small">
-                <label>E-Mail</label>
-                <input type="text" class="customer-name">
-            </div>
-            <button type="submit">Yorum Gönder</button>
-        </form>
-    </div>
-</section>
+    </section>
